ref #542: Use the new type icon; align correctly

--- a/src/MediaManagerBundle/Resources/public/css/mediaManager.css
+++ b/src/MediaManagerBundle/Resources/public/css/mediaManager.css
@@ -299,6 +299,15 @@
     vertical-align: top;
 }
 
+.snippetMediaManagerBackendModuleStandard .snippetMediaManagerListList .info td:first-child {
+    padding-right: 5px;
+    text-align: center;
+}
+
+.snippetMediaManagerBackendModuleStandard .snippetMediaManagerListList .info td i {
+    margin-right: 0 !important;
+}
+
 .snippetMediaManagerBackendModuleStandard .snippetMediaManagerDeleteConfirmDelete .item-to-delete-name {
     font-weight: bold;
 }
